Rename files to avoid original library

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Adafruit SSD1306
+name=Arduino-SSD1306
 version=1.1.2-gjh
-author=Adafruit
-maintainer=Adafruit <info@adafruit.com>
+author=Adafruit + Gavin Hurlbut
+maintainer=Gavin Hurlbut <gjhurlbu@gmail.com>
 sentence=SSD1306 oled driver library for 'monochrome' 128x64 and 128x32 OLEDs!
-paragraph=SSD1306 oled driver library for 'monochrome' 128x64 and 128x32 OLEDs!
+paragraph=SSD1306 oled driver library for 'monochrome' 128x64 and 128x32 OLEDs!  Redesigned to use an FRAM to offload the buffer to an external device (with row-based caching)
 category=Display
-url=https://github.com/adafruit/Adafruit_SSD1306
+url=https://github.com/Beirdo/Arduino-SSD1306
 architectures=*
